--- a/css/_navPanel.scss
+++ b/css/_navPanel.scss
@@ -1,6 +1,6 @@
 md-sidenav {
 	header {
-		background: $primary-color-1;
+		background: $accent-color;
 	  -moz-box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
 	  -ms-box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
 	  -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
