--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,11 @@ body {
   width: 100%; }
 
 md-content[ng-view] {
+  background: #f0f0f0;
   height: calc(100% - 64px);
   overflow: hidden;
   overflow-y: auto;
-  padding: 24px; }
+  padding-bottm: 24px; }
 
 /* ==========================================================================
    typography
@@ -188,18 +189,24 @@ md-sidenav md-list {
 
 article:first-child {
   border: none; }
+article > header {
+  padding: 24px 0 0; }
 article header {
   margin: 8px auto;
   max-width: 960px; }
   article header.splash-header {
     background: #ff5722;
-    padding: 48px 24px; }
+    margin: 0;
+    padding: 48px 24px;
+    max-width: none; }
     article header.splash-header h1, article header.splash-header body h2, body article header.splash-header h2,
     article header.splash-header body h3,
     body article header.splash-header h3,
     article header.splash-header body h4,
     body article header.splash-header h4 {
-      color: #fff; }
+      color: #fff;
+      margin: 0 auto;
+      max-width: 960px; }
   article header .tags {
     flex-wrap: wrap; }
     article header .tags ng-md-icon {
@@ -217,9 +224,15 @@ article header {
         padding-left: 0;
         padding-right: 0; }
 article md-tabs.md-default-theme .md-header {
-  background: #f0f0f0; }
+  background: #f0f0f0;
+  margin: 0;
+  max-width: none;
+  padding: 0; }
   article md-tabs.md-default-theme .md-header md-tab.active {
     color: #ff5722; }
+article md-tabs .md-header-items-container {
+  margin: 0 auto;
+  max-width: 960px; }
 article section {
   margin: 32px auto;
   max-width: 960px; }
@@ -277,50 +290,135 @@ article footer {
       display: block; }
       article footer .links md-list-item a, article footer .links md-sidenav md-list md-list-item .expandable, md-sidenav md-list article footer .links md-list-item .expandable {
         word-break: break-all; }
-article .block-color header {
-  background: rgba(0, 0, 0, 0.87);
-  color: #fff;
-  padding: 24px; }
-article .block-color.primary-2 {
-  background: #b3e5fc; }
-  article .block-color.primary-2 header {
-    background: #0277bd; }
-  article .block-color.primary-2 .numeral {
-    color: rgba(0, 0, 0, 0.87); }
-article .block-color.grey {
-  background: #f0f0f0; }
-  article .block-color.grey header {
-    background: rgba(0, 0, 0, 0.87); }
-  article .block-color.grey .numeral {
-    color: rgba(0, 0, 0, 0.87); }
-article .block-color.accent {
-  background: #ffccbc; }
-  article .block-color.accent header {
-    background: #ff5722; }
-  article .block-color.accent .numeral {
-    color: rgba(0, 0, 0, 0.87); }
-article .block-color main {
-  padding: 0 24px 24px; }
+article .block-color {
+  margin: 32px auto; }
+  article .block-color header {
+    background: rgba(0, 0, 0, 0.87);
+    color: #fff;
+    padding: 24px; }
+  article .block-color.primary-2 {
+    background: #b3e5fc; }
+    article .block-color.primary-2 header {
+      background: #0277bd; }
+    article .block-color.primary-2 .numeral {
+      color: rgba(0, 0, 0, 0.87); }
+  article .block-color.grey {
+    background: #f0f0f0; }
+    article .block-color.grey header {
+      background: rgba(0, 0, 0, 0.87); }
+    article .block-color.grey .numeral {
+      color: rgba(0, 0, 0, 0.87); }
+  article .block-color.accent {
+    background: #ffccbc; }
+    article .block-color.accent header {
+      background: #ff5722; }
+    article .block-color.accent .numeral {
+      color: rgba(0, 0, 0, 0.87); }
+  article .block-color main {
+    padding: 0 24px 24px; }
 
 /* ==========================================================================
    code
 ========================================================================== */
 pre {
-  background: rgba(0, 0, 0, 0.12);
+  background: rgba(255, 255, 255, 0.4);
   font: 500 16px/1.6em 'Source Code Pro', monospace;
   padding: 24px;
   white-space: normal;
   word-break: break-all; }
 
 /* ==========================================================================
+   splash page
+========================================================================== */
+.splash-view .copy {
+  padding: 24px; }
+  .splash-view .copy h2 {
+    margin-bottom: 16px; }
+.splash-view .text p:first-child {
+  margin-top: 0; }
+.splash-view ul {
+  list-style-position: outside;
+  margin: 1em 0 1em 1em;
+  padding: 0 0 0 1em; }
+  .splash-view ul:first-child {
+    margin-top: 0; }
+  .splash-view ul li {
+    margin: 4px 0; }
+.splash-view .grid {
+  flex-wrap: wrap; }
+  .splash-view .grid md-card {
+    background: #fff;
+    -webkit-flex: 0 0 calc(50% - 16px);
+    -ms-flex: 0 0 calc(50% - 16px);
+    flex: 0 0 calc(50% - 16px); }
+  .splash-view .grid .icon {
+    padding: 16px;
+    position: relative;
+    text-align: center; }
+    .splash-view .grid .icon img {
+      max-height: 88px;
+      width: auto; }
+    .splash-view .grid .icon:after {
+      background: rgba(0, 0, 0, 0.12);
+      content: '';
+      height: 100%;
+      position: absolute;
+      right: 0;
+      top: 0;
+      width: 1px; }
+  .splash-view .grid .snippet {
+    color: rgba(0, 0, 0, 0.87);
+    padding: 16px; }
+    .splash-view .grid .snippet h3 {
+      margin-bottom: 16px; }
+    .splash-view .grid .snippet i {
+      color: #0288d1;
+      font-style: normal; }
+.splash-view section .section {
+  margin: 32px auto; }
+  .splash-view section .section:first-child {
+    margin-top: 0; }
+.splash-view section .graph {
+  background: #fff;
+  padding: 16px; }
+
+/* ==========================================================================
    media queries
 ========================================================================== */
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1008px) {
   md-toolbar .md-subhead {
-    margin: 0; } }
+    margin: 0; }
+
+  article > header {
+    padding: 24px 24px 0; }
+  article .block-color {
+    margin: 32px 16px; }
+  article main {
+    padding: 0 24px; }
+  article section header {
+    padding: 0 24px; }
+  article footer {
+    padding: 0 24px; }
+
+  .splash-view .copy {
+    padding: 24px 0; }
+  .splash-view .grid md-card {
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1; } }
 @media only screen and (max-width: 600px) {
+  .top-bar .md-subhead {
+    font-size: 12px;
+    font-weight: 500; }
+  .top-bar .inner-content i {
+    display: none; }
+  .top-bar .inner-content a, .top-bar .inner-content md-sidenav md-list md-list-item .expandable, md-sidenav md-list md-list-item .top-bar .inner-content .expandable,
+  .top-bar .inner-content span {
+    display: block;
+    margin: 3px 0; }
+
   md-content[ng-view] {
-    padding: 16px; }
+    padding-bottom: 16px; }
 
   pre {
     padding: 16px; }
@@ -328,17 +426,28 @@ pre {
   .md-display-1.numeral {
     display: none; }
 
+  article > header {
+    padding: 16px 16px 0; }
   article.welcome > header {
     padding: 32px 16px; }
   article .block-color header {
     padding: 16px; }
   article .block-color main {
     padding: 0 16px 16px; }
+  article section header {
+    padding: 0 16px; }
+  article section main {
+    padding: 0 16px; }
   article section .block {
     padding: 16px;
     text-align: center; }
   article section.quick-start md-list-item {
     padding: 16px;
-    margin-top: 16px; } }
+    margin-top: 16px; }
+  article footer {
+    padding: 0 16px; }
+
+  .splash-view .copy {
+    padding: 16px 0; } }
 
 /*# sourceMappingURL=style.css.map */
