--- a/css/_media_queries.scss
+++ b/css/_media_queries.scss
@@ -13,6 +13,11 @@
 
 				.big-image {
 					max-height: none;
+
+					img {
+						height: auto;
+						max-width: 100%;
+					}
 				}
 
 				.copy {
