--- a/css/main_style.css
+++ b/css/main_style.css
@@ -107,13 +107,17 @@ header h3 {
   padding: 16px 0; }
 header.masthead {
   background: #ff5722;
-  padding: 48px 0; }
+  padding: 24px 0; }
   header.masthead h1, header.masthead body h2, body header.masthead h2,
   header.masthead body h3,
   body header.masthead h3,
   header.masthead body h4,
   body header.masthead h4 {
     color: #fff; }
+  header.masthead span {
+    display: block;
+    margin: 0 auto;
+    max-width: 150px; }
 
 md-tabs md-tab {
   border-bottom: 2px solid #fff;
@@ -148,7 +152,8 @@ section {
     background: rgba(255, 255, 255, 0.6);
     margin: 0;
     padding-bottom: 8px;
-    padding-top: 8px; }
+    padding-top: 8px;
+    text-align: center; }
     section.breadcrumbs i {
       font-style: normal;
       margin: 0 2px; }
@@ -164,14 +169,14 @@ ul.no-style {
    splash view
 ========================================================================== */
 section main.bg-white-trans .big-image {
-  max-height: 364px;
+  max-height: 400px;
   overflow: hidden;
   width: 100%; }
   section main.bg-white-trans .big-image img {
-    max-width: none;
-    width: 100%; }
+    height: 100%;
+    max-width: none; }
 section main.bg-white-trans .copy {
-  max-height: 364px;
+  max-height: 400px;
   overflow: hidden;
   overflow-y: auto;
   padding: 24px; }
@@ -184,6 +189,8 @@ section main md-card {
       font-style: normal;
       color: #0288d1; }
   section main md-card .icon {
+    max-width: 112px;
+    min-width: 112px;
     padding: 16px;
     text-align: center; }
     section main md-card .icon img {
@@ -191,7 +198,8 @@ section main md-card {
       width: auto; }
   section main md-card .snippet {
     border-left: 1px solid rgba(0, 0, 0, 0.12);
-    padding: 16px; }
+    padding: 16px;
+    width: calc(100% - 112px); }
     section main md-card .snippet h3 {
       margin-bottom: 16px; }
   section main md-card.toolkit-card .title {
@@ -306,6 +314,9 @@ footer.links a {
     max-height: none; }
     section main.bg-white-trans .big-image {
       max-height: none; }
+      section main.bg-white-trans .big-image img {
+        height: auto;
+        max-width: 100%; }
     section main.bg-white-trans .copy {
       max-height: none;
       padding: 16px; } }
