--- a/css/old/_splash.scss
+++ b/css/old/_splash.scss
@@ -1,14 +1,42 @@
 .splash-view {
-  .grid {
-    .grid-item {
-      background: #fff;
-      height: 100%;
-      margin: 0;
-      width: 100%;
+  .copy {
+    padding: $large-padding;
 
-      .redirect {
-        height: 100%;
+    h2 {
+      margin-bottom: $small-padding;
+    }
+  }
+
+  .text {
+    p {
+      &:first-child {
+        margin-top: 0;
       }
+    }
+  }
+
+  ul {
+    list-style-position: outside;
+    margin: 1em 0 1em 1em;
+    padding: 0 0 0 1em;
+
+    &:first-child {
+      margin-top: 0;
+    }
+
+    li {
+      margin: 4px 0;
+    }
+  }
+
+  .grid {
+    flex-wrap: wrap;
+
+    md-card {
+      background: #fff;
+      -webkit-flex: 0 0 calc(50% - 16px);
+      -ms-flex: 0 0 calc(50% - 16px);
+      flex: 0 0 calc(50% - 16px);
     }
 
     .icon {
@@ -34,8 +62,6 @@
 
     .snippet {
       color: $font-color;
-      overflow: hidden;
-      overflow-y: auto;
       padding: $small-padding;
 
       h3 {
@@ -55,49 +81,6 @@
 
       &:first-child {
         margin-top: 0;
-      }
-
-      &.bg-white {
-        background: $trans-white;
-        max-height: 400px;
-        overflow: hidden;
-
-        .image {
-          max-height: 400px;
-          overflow: hidden;
-          width: 100%;
-
-          img {
-            max-width: none;
-            width: 100%;
-          }
-        }
-      }
-
-      .copy {
-        height: 100%;
-        max-height: 400px;
-        overflow: hidden;
-        overflow-y: auto; 
-        padding: $large-padding;
-
-        .md-button {
-          display: inline-block;
-        }
-      }
-
-      ul {
-        list-style-position: outside;
-        margin: 1em 0 1em 1em;
-        padding: 0 0 0 1em;
-
-        &:first-child {
-          margin-top: 0;
-        }
-
-        li {
-          margin: 4px 0;
-        }
       }
     }
 
