hide images in toolkit description on toolksit tab

--- a/css/_splash.scss
+++ b/css/_splash.scss
@@ -71,6 +71,10 @@ section {
 					text-overflow: ellipsis;
 					white-space: nowrap;
 					width: 100%;
+					
+					img {
+						display: none;
+					}
 				}
 			}
 		}
