--- a/css/_general_layout.scss
+++ b/css/_general_layout.scss
@@ -5,6 +5,10 @@
 	padding: 0 $large-space;
 }
 
+md-progress-circular {
+	margin: $large-space auto;
+}
+
 header {
 	h3 {
 		padding: $small-space 0;
@@ -12,16 +16,48 @@ header {
 
 	&.masthead {
 		background: $primary-color;
-		padding: $large-space 0;
+		padding: $small-space 0;
+		position: relative;
+		overflow: hidden;
 
 		h1 {
 			color: #fff;
 		}
 
-		span {
+		.shadow {
+			background: #000;
+			background: -moz-linear-gradient(top, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
+			background: -ms-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
+			background: -webkit-linear-gradient(top, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);
+			background: linear-gradient(to bottom, rgba(0,0,0,1) 0%,rgba(0,0,0,0) 100%);		
+		  height: 300px;
+	    left: calc(50% + 30px);
+	    opacity: .1;
+		  position: absolute;
+		  top: 25%;
+		  -moz-transform: rotate(-45deg);
+		  -ms-transform: rotate(-45deg);
+		  -webkit-transform: rotate(-45deg);
+		  transform: rotate(-45deg);
+		  width: 150px;
+		}
+
+		a {
+			background: #fff;
+			-moz-border-radius: 50%;
+			-ms-border-radius: 50%;
+			-webkit-border-radius: 50%;
+			border-radius: 50%;
 			display: block;
+			height: 150px;
 			margin: 0 auto;
-		  max-width: 150px;
+			padding: $small-space;
+			position: relative;
+		  width: 150px;
+
+		  img {
+		  	margin-top: 4px;
+		  }
 		}
 	}
 }
@@ -83,7 +119,6 @@ section {
 		margin: 0;
 		padding-bottom: 8px;
 		padding-top: 8px;
-		text-align: center;
 
 		i {
 			font-style: normal;
