--- a/css/_media_queries.scss
+++ b/css/_media_queries.scss
@@ -17,6 +17,7 @@
 					img {
 						height: auto;
 						max-width: 100%;
+					  width: 100%;
 					}
 				}
 
@@ -50,6 +51,12 @@
 					.snippet {
 						border: none;
 					}
+				}
+			}
+
+			.categories {
+				.expanded-content {
+					padding: $small-space;
 				}
 			}
 		}
